--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -1,19 +1,19 @@
-# 国际化
-vue-element-admin 集合了国际化i18n。
+# I18n
+vue-element-admin integrated international.
 
 ## vue-i18n
-本项目国际化方案主要是依赖 [vue-i18n](https://github.com/kazupon/vue-i18n)而实现。
 
-> 这里的国际化暂时只做了文本内容方面的处理。本项目暂时只翻译了路由和 i18n 页面。
+The internationalization program of this project mainly relies on [vue-i18n](https://github.com/kazupon/vue-i18n).
 
-### 全局lang
-?> 代码地址: `@/lang`
-目前配置了英文和中文两种语言。
+### Global lang
+?> Code: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
+Currently set English and Chinese languages.
 
-同时在 `@/lang/index.js` 中引入了 `element-ui`的语言包
+Meanwhile, import a language package in `@/lang/index.js` for `element-ui`.
 
-### 异步lang
-有一些某些特定页面才需要的 lang，比如 `@/views/i18n` 页面
+### Async lang
+There are some langs that are needed for specific pages, such as the `@/views/i18n` page, you can use async lang.
+
 ```js
 import local from './local'
 
@@ -21,8 +21,8 @@ this.$i18n.mergeLocaleMessage('en', local.en)
 this.$i18n.mergeLocaleMessage('zh', local.zh)
 ```
 
-## 移除国际化
+## Remove i18n
 
-在 `src/main.js` 中移除 `import i18n from './lang'` 并且删除 `src/lang` 文件夹
+In `src/main.js` remove `import i18n from './lang'` and delete `src/lang` folder.
 
-并在 `src/layout/components/Levelbar`、`src/layout/components/SidebarItem`、`src/layout/components/TabsView` 等文件夹中 移除 `this.$t('route.xxxx')` 使用国际化的方式。
+And remove  `this.$t('route.xxxx')` in `src/layout/components/Levelbar`、`src/layout/components/SidebarItem`、`src/layout/components/TabsView` or others.
