--- a/docs/zh-cn/i18n.md
+++ b/docs/zh-cn/i18n.md
@@ -4,10 +4,8 @@ vue-element-admin 集合了国际化i18n。
 ## vue-i18n
 本项目国际化方案主要是依赖 [vue-i18n](https://github.com/kazupon/vue-i18n)而实现。
 
-> 这里的国际化暂时只做了文本内容方面的处理。本项目暂时只翻译了路由和 i18n 页面。
-
 ### 全局lang
-?> 代码地址: `@/lang`
+?> 代码地址: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
 目前配置了英文和中文两种语言。
 
 同时在 `@/lang/index.js` 中引入了 `element-ui`的语言包
