--- a/docs/zh/guide/advanced/i18n.md
+++ b/docs/zh/guide/advanced/i18n.md
@@ -1,17 +1,25 @@
 # 国际化
-vue-element-admin 集合了国际化i18n。
+本项目集合了国际化i18n方案。通过 [vue-i18n](https://github.com/kazupon/vue-i18n)而实现。
 
-## vue-i18n
-本项目国际化方案主要是依赖 [vue-i18n](https://github.com/kazupon/vue-i18n)而实现。
+由于本项目ui框架使用了`element`，所以国际化的同时也要将其国际化。
+[完整代码](https://github.com/PanJiaChen/vue-element-admin/blob/master/src/lang/index.js)。
+同时将当前 `lang` 语言存在 `cookie`之中，为了下次打开页面能记住上次的语言设置。
 
-### 全局lang
-?> 代码地址: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
+
+# 全局lang
+代码地址: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
 目前配置了英文和中文两种语言。
 
 同时在 `@/lang/index.js` 中引入了 `element-ui`的语言包
 
-### 异步lang
-有一些某些特定页面才需要的 lang，比如 `@/views/i18n` 页面
+**使用：**
+```js
+// $t 是 vue-i18n 提供的全局方法，更多信息请查看其文档
+$t('login.title')
+```
+
+# 异步lang
+有一些某些特定页面才需要的 lang，比如 `@/views/i18n-demo` 页面
 ```js
 import local from './local'
 
@@ -19,8 +27,8 @@ this.$i18n.mergeLocaleMessage('en', local.en)
 this.$i18n.mergeLocaleMessage('zh', local.zh)
 ```
 
-## 移除国际化
+# 移除国际化
 
-在 `src/main.js` 中移除 `import i18n from './lang'` 并且删除 `src/lang` 文件夹
+在 `src/main.js` 中移除 `import i18n from './lang'` 并且删除 `src/lang` 文件夹。
 
 并在 `src/layout/components/Levelbar`、`src/layout/components/SidebarItem`、`src/layout/components/TabsView` 等文件夹中 移除 `this.$t('route.xxxx')` 使用国际化的方式。
