--- a/docs/guide/advanced/i18n.md
+++ b/docs/guide/advanced/i18n.md
@@ -1,17 +1,17 @@
 # I18n
-vue-element-admin integrated international.
+This project is a collection of internationalized i18n solutions. Implemented via  [vue-i18n](https://github.com/kazupon/vue-i18n).
 
-## vue-i18n
+Since the project's ui framework uses `element`, internationalization also needs to be internationalized.
+[code](https://github.com/PanJiaChen/vue-element-admin/blob/master/src/lang/index.js).
+At the same time, the current `lang` language save in the `cookie`, and the last language setting can be remembered for opening the page next time.
 
-The internationalization program of this project mainly relies on [vue-i18n](https://github.com/kazupon/vue-i18n).
-
-### Global lang
-?> Code: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
+## Global lang
+Code: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
 Currently set English and Chinese languages.
 
 Meanwhile, import a language package in `@/lang/index.js` for `element-ui`.
 
-### Async lang
+## Async lang
 There are some langs that are needed for specific pages, such as the `@/views/i18n` page, you can use async lang.
 
 ```js
