--- a/docs/zh/guide/advanced/i18n.md
+++ b/docs/zh/guide/advanced/i18n.md
@@ -1,30 +1,34 @@
 # 国际化
-本项目集合了国际化i18n方案。通过 [vue-i18n](https://github.com/kazupon/vue-i18n)而实现。
 
-由于本项目ui框架使用了`element`，所以国际化的同时也要将其国际化。
+本项目集合了国际化 i18n 方案。通过 [vue-i18n](https://github.com/kazupon/vue-i18n)而实现。
+
+由于本项目 ui 框架使用了`element`，所以国际化的同时也要将其国际化。
 [完整代码](https://github.com/PanJiaChen/vue-element-admin/blob/master/src/lang/index.js)。
 同时将当前 `lang` 语言存在 `cookie`之中，为了下次打开页面能记住上次的语言设置。
 
+# 全局 lang
 
-# 全局lang
 代码地址: [@/lang](https://github.com/PanJiaChen/vue-element-admin/tree/master/src/lang)
 目前配置了英文和中文两种语言。
 
 同时在 `@/lang/index.js` 中引入了 `element-ui`的语言包
 
 **使用：**
+
 ```js
 // $t 是 vue-i18n 提供的全局方法，更多信息请查看其文档
-$t('login.title')
+$t("login.title");
 ```
 
-# 异步lang
-有一些某些特定页面才需要的 lang，比如 `@/views/i18n-demo` 页面
-```js
-import local from './local'
+# 异步 lang
 
-this.$i18n.mergeLocaleMessage('en', local.en)
-this.$i18n.mergeLocaleMessage('zh', local.zh)
+有一些某些特定页面才需要的 lang，比如 `@/views/i18n-demo` 页面
+
+```js
+import local from "./local";
+
+this.$i18n.mergeLocaleMessage("en", local.en);
+this.$i18n.mergeLocaleMessage("zh", local.zh);
 ```
 
 # 移除国际化
