--- a/docs/guide/advanced/i18n.md
+++ b/docs/guide/advanced/i18n.md
@@ -18,10 +18,10 @@ Meanwhile, import a language package in `@/lang/index.js` for `element-ui`.
 There are some langs that are needed for specific pages, such as the `@/views/i18n` page, you can use async lang.
 
 ```js
-import local from "./local";
+import local from './local'
 
-this.$i18n.mergeLocaleMessage("en", local.en);
-this.$i18n.mergeLocaleMessage("zh", local.zh);
+this.$i18n.mergeLocaleMessage('en', local.en)
+this.$i18n.mergeLocaleMessage('zh', local.zh)
 ```
 
 ## Remove i18n
