--- a/docs/zh/guide/advanced/i18n.md
+++ b/docs/zh/guide/advanced/i18n.md
@@ -17,7 +17,7 @@
 
 ```js
 // $t 是 vue-i18n 提供的全局方法，更多信息请查看其文档
-$t("login.title");
+$t('login.title')
 ```
 
 # 异步 lang
@@ -25,10 +25,10 @@ $t("login.title");
 有一些某些特定页面才需要的 lang，比如 `@/views/i18n-demo` 页面
 
 ```js
-import local from "./local";
+import local from './local'
 
-this.$i18n.mergeLocaleMessage("en", local.en);
-this.$i18n.mergeLocaleMessage("zh", local.zh);
+this.$i18n.mergeLocaleMessage('en', local.en)
+this.$i18n.mergeLocaleMessage('zh', local.zh)
 ```
 
 # 移除国际化
