--- a/docs/guide/advanced/i18n.md
+++ b/docs/guide/advanced/i18n.md
@@ -24,6 +24,67 @@ this.$i18n.mergeLocaleMessage('en', local.en)
 this.$i18n.mergeLocaleMessage('zh', local.zh)
 ```
 
+# Use $t in js
+
+If you use a component such as `select`, its value comes through `v-for`, such as:
+
+```html
+<el-select v-model="value">
+  <el-option
+    v-for="item in options"
+    :key="item.value"
+    :label="item.label"
+    :value="item.value"/>
+</el-select>
+```
+
+```js
+this.options = [
+  {
+    value: '1',
+    label: this.$t('i18nView.one')
+  },
+  {
+    value: '2',
+    label: this.$t('i18nView.two')
+  },
+  {
+    value: '3',
+    label: this.$t('i18nView.three')
+  }
+]
+```
+
+In this case, i18n will only be executed once, because `this.options` in js will only be executed once during `created`, and its data will not change as your local `lang` changes, so You need to manually reset `this.options` when the `lang` changes.
+
+```js
+export default {
+  watch: {
+    lang() {
+      this.setOptions()
+    }
+  },
+  methods: {
+    setOptions() {
+      this.options = [
+        {
+          value: '1',
+          label: this.$t('i18nView.one')
+        },
+        {
+          value: '2',
+          label: this.$t('i18nView.two')
+        },
+        {
+          value: '3',
+          label: this.$t('i18nView.three')
+        }
+      ]
+    }
+  }
+}
+```
+
 ## Remove i18n
 
 In `src/main.js` remove `import i18n from './lang'` and delete `src/lang` folder.
