--- a/docs/zh/guide/advanced/i18n.md
+++ b/docs/zh/guide/advanced/i18n.md
@@ -31,6 +31,67 @@ this.$i18n.mergeLocaleMessage('en', local.en)
 this.$i18n.mergeLocaleMessage('zh', local.zh)
 ```
 
+# js 中使用 $t
+
+如果你使用如 `select`组件，它的值是通过 `v-for`而来，如：
+
+```html
+<el-select v-model="value">
+  <el-option
+    v-for="item in options"
+    :key="item.value"
+    :label="item.label"
+    :value="item.value"/>
+</el-select>
+```
+
+```js
+this.options = [
+  {
+    value: '1',
+    label: this.$t('i18nView.one')
+  },
+  {
+    value: '2',
+    label: this.$t('i18nView.two')
+  },
+  {
+    value: '3',
+    label: this.$t('i18nView.three')
+  }
+]
+```
+
+这种情况下，国际化只会执行一次，因为在 js 中的`this.options`只会在初始化的时候执行一次，它的数据并不会随着你本地 `lang`的变化而变化，所以需要你在`lang`变化的时候手动重设`this.options`。
+
+```js
+export default {
+  watch: {
+    lang() {
+      this.setOptions()
+    }
+  },
+  methods: {
+    setOptions() {
+      this.options = [
+        {
+          value: '1',
+          label: this.$t('i18nView.one')
+        },
+        {
+          value: '2',
+          label: this.$t('i18nView.two')
+        },
+        {
+          value: '3',
+          label: this.$t('i18nView.three')
+        }
+      ]
+    }
+  }
+}
+```
+
 # 移除国际化
 
 在 `src/main.js` 中移除 `import i18n from './lang'` 并且删除 `src/lang` 文件夹。
