--- a/docs/guide/advanced/i18n.md
+++ b/docs/guide/advanced/i18n.md
@@ -90,3 +90,7 @@ export default {
 In `src/main.js` remove `import i18n from './lang'` and delete `src/lang` folder.
 
 And remove `this.$t('route.xxxx')` in `src/layout/components/Levelbar`、`src/layout/components/SidebarItem`、`src/layout/components/TabsView` or others.
+
+After the <Badge text="v4.1.0+"/> version, the default master will no longer provide i18n. Because most users are not need i18n, the removal of i18n workload is quite large.
+
+If you have i18n requirements, please use [i18n Branch](https://github.com/PanJiaChen/vue-element-admin/tree/i18n), which is updated synchronously with master.
