--- a/docs/zh/guide/advanced/i18n.md
+++ b/docs/zh/guide/advanced/i18n.md
@@ -97,3 +97,7 @@ export default {
 在 `src/main.js` 中移除 `import i18n from './lang'` 并且删除 `src/lang` 文件夹。
 
 并在 `src/layout/components/Levelbar`、`src/layout/components/SidebarItem`、`src/layout/components/TabsView` 等文件夹中 移除 `this.$t('route.xxxx')` 使用国际化的方式。
+
+在<Badge text="v4.1.0+"/>版本之后，默认 master 将不再提供国际化。因为大部分用户其实是用不到国际化的，但移除国际化工作量又相当的大。
+
+如果你有国际化需求的请使用 [i18n 分支](https://github.com/PanJiaChen/vue-element-admin/tree/i18n)，它与 master 同步更新。
